tests/should-fail/syntax/set-type2.j

type unit extends handle

function test takes nothing returns nothing
    local unit u
    set u unit = null
endfunction
